--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,21 @@
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>1.5.7</version>
+    </dependency> 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.4.5</version>
+    </dependency>    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.4.5</version>
+    </dependency>    
+    <dependency>
 	    <groupId>org.hsqldb</groupId>
 	    <artifactId>hsqldb</artifactId>
 	    <version>2.3.3</version>
@@ -29,6 +44,6 @@
     </dependency>    
   </dependencies>
   <build>
-    <finalName>evekit-account-manager-${project.version}</finalName>
+    <finalName>evekit-${project.artifactId}-${project.version}</finalName>    
   </build>  
 </project>
