--- a/src/test/resources/AccountManagerTest.properties
+++ b/src/test/resources/AccountManagerTest.properties
@@ -2,4 +2,4 @@
 # Properties for account manager unit tests
 #
 enterprises.orbital.evekit.account.persistence_unit = account-manager-test
-
+enterprises.orbital.evekit.ref.persistence_unit = account-manager-test
