prepapre for release

--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,17 @@
   </parent>
   <groupId>enterprises.orbital.evekit</groupId>
   <artifactId>account-manager</artifactId>
-  <version>3.0.0</version>
+  <version>3.1.0</version>
   <name>EveKit Account Manager</name>
   <description>EveKit account manager services</description>
   <url>https://github.com/OrbitalEnterprises/evekit-account-manager</url>
   <scm>
-  	<url>https://github.com/OrbitalEnterprises/evekit-account-manager</url>
-  	<connection>scm:git:https://github.com/OrbitalEnterprises/evekit-account-manager.git</connection>
-  	<tag>rel_3_0_0</tag>
-  	<developerConnection>scm:git:git@github.com:OrbitalEnterprises/evekit-account-manager.git</developerConnection>
+    <url>https://github.com/OrbitalEnterprises/evekit-account-manager</url>
+    <connection>scm:git:https://github.com/OrbitalEnterprises/evekit-account-manager.git</connection>
+    <developerConnection>scm:git:git@github.com:OrbitalEnterprises/evekit-account-manager.git</developerConnection>
   </scm>
   <properties>
-    <orbital.oauth.version>2.2.0</orbital.oauth.version>
-    <orbital.toolchain.version>2.1.0</orbital.toolchain.version>
+    <orbital.toolchain.version>2.3.0</orbital.toolchain.version>
     <swagger.version>1.5.7</swagger.version>
     <jackson.core.version>2.4.5</jackson.core.version>
     <hsqldb.version>2.3.3</hsqldb.version>
@@ -28,7 +26,7 @@
     <dependency>
       <groupId>enterprises.orbital</groupId>
       <artifactId>oauth</artifactId>
-      <version>${orbital.oauth.version}</version>
+      <version>${orbital.toolchain.version}</version>
     </dependency>
     <dependency>
       <groupId>enterprises.orbital</groupId>
@@ -51,10 +49,10 @@
       <version>${jackson.core.version}</version>
     </dependency>    
     <dependency>
-	    <groupId>org.hsqldb</groupId>
-	    <artifactId>hsqldb</artifactId>
-	    <version>${hsqldb.version}</version>
-	    <scope>test</scope>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>${hsqldb.version}</version>
+      <scope>test</scope>
     </dependency>    
   </dependencies>
   <build>
