cleanup old trackers; separate notifications into distinct connection factory

--- a/src/test/resources/AccountManagerTest.properties
+++ b/src/test/resources/AccountManagerTest.properties
@@ -3,3 +3,4 @@
 #
 enterprises.orbital.evekit.account.persistence_unit = account-manager-test
 enterprises.orbital.evekit.ref.persistence_unit = account-manager-test
+enterprises.orbital.evekit.user_note.persistence_unit = account-manager-test
